--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "ultimas-noticias",
+  "homepage": "http://brunoardel.github.io/portal-ultimas-noticias",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.18.1",
+    "gh-pages": "^3.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^4.3.1",
@@ -11,6 +13,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
