--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ultimas-noticias",
+  "name": "portal-ultimas-noticias",
   "homepage": "http://brunoardel.github.io/portal-ultimas-noticias",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.1",
+    "axios": "^0.21.1",
     "gh-pages": "^3.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -16,7 +16,25 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
